--- a/src/workerd/io/BUILD.bazel
+++ b/src/workerd/io/BUILD.bazel
@@ -124,6 +124,12 @@ wd_cc_library(
     ],
 )
 
+wd_cc_library(
+    name = "do-context",
+    hdrs = ["do-context.h"],
+    visibility = ["//visibility:public"],
+)
+
 genrule(
     name = "trimmed-supported-compatibility-date-gen",
     srcs = ["supported-compatibility-date.txt"],
@@ -154,6 +160,7 @@ wd_cc_capnp_library(
         ":outcome_capnp",
         ":script_version_capnp",
         ":compatibility_date_capnp",
+        ":do-context_capnp",
         ":trimmed-supported-compatibility-date",
         "@capnp-cpp//src/capnp/compat:http-over-capnp_capnp",
     ],
@@ -174,6 +181,12 @@ wd_cc_capnp_library(
 wd_cc_capnp_library(
     name = "compatibility_date_capnp",
     srcs = ["compatibility-date.capnp"],
+    visibility = ["//visibility:public"],
+)
+
+wd_cc_capnp_library(
+    name = "do-context_capnp",
+    srcs = ["do-context.capnp"],
     visibility = ["//visibility:public"],
 )
 
